k8s/istio/gateway.yaml
# Istio Gateway : point d'entrée HTTP du cluster
# Remplace l'Ingress NGINX pour le routage du trafic entrant
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mini-commerce-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway   # utilise l'IngressGateway Istio installé par défaut
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
